--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
 on: [push, pull_request]
-name: Test
+name: Test and coverage
 jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.17.x, 1.18.x]
+        go-version: ['1.17.x', '1.18.x']
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -14,3 +14,13 @@ jobs:
     - uses: actions/checkout@v3
     - run: go test ./...
     - run: go test -race ./...
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        go-version: '1.18'
+    - name: Run coverage
+    - run: go test -race -covermode=atomic -coverprofile=coverage.out
+    - name: Upload coverage to Codecov
+    - uses: codecov/codecov-action@v3
