--- a/codecov.yml
+++ b/codecov.yml
@@ -8,7 +8,7 @@ coverage:
   status:
     project:
       default:
-        target: auto
+        target: 90%
         threshold: 5%
 parsers:
   gcov:
