--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,14 +4,14 @@ jobs:
   test-and-coverage:
     strategy:
       matrix:
-        go-version: [1.18.x]
-        os: [ubuntu-latest]
+        os: [macos-latest, windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
+    - uses: actions/checkout@v3
+    - name: Setup go
     - uses: actions/setup-go@v3
       with:
-        go-version: ${{ matrix.go-version }}
-    - uses: actions/checkout@v3
+        go-version-file: './go.mod'
     - run: go test ./...
     - run: go test -race -covermode=atomic -coverprofile=coverage.out
     - name: Upload coverage to Codecov
