--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Setup go
-    - uses: actions/setup-go@v3
+      uses: actions/setup-go@v3
       with:
         go-version-file: './go.mod'
     - run: go test ./...
