--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,6 @@ jobs:
       with:
         go-version-file: './go.mod'
     - run: go test ./...
-    - run: go test -race -covermode=atomic -coverprofile=coverage.out
+    - run: go test -race -covermode atomic -coverprofile coverage.out
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
