update benchmarks. increase code coverage requirements. disable minimum go version updates.

--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,12 @@
       {
         "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
         "automerge": true
+      },
+      {
+        "description": "Opt-out of minimum Go version updates",
+        "matchManagers": ["gomod"],
+        "matchDepTypes": ["golang"],
+        "enabled": false
       }
     ],
     "gomod": {
