Fix CI version tag check.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,15 +19,30 @@ jobs:
       run: make tests
     - name: Build CLI app
       run: make build_cli
-    - name: Ensure that CLI app version tag is newer than latest git tag
+    - name: |
+        If HEAD is not tagged, CLI app version tag should be newer than latest git version tag
+        If HEAD is tagged, CLI app version tag should be equal to latest git version tag
       shell: bash
       run: |
         LATEST_TAG=$(git describe --tags `git rev-list --tags --max-count=1`)
         CLI_TAG=$(dist/fasttld -v | awk '{print $NF}')
-        if [[ $LATEST_TAG == $CLI_TAG || $( printf $LATEST_TAG"\n"$CLI_TAG ) != $( printf $LATEST_TAG"\n"$CLI_TAG | sort -V ) ]]
+        if [[ $( printf $LATEST_TAG"\n"$CLI_TAG ) != $( printf $LATEST_TAG"\n"$CLI_TAG | sort -V ) ]]
         then
-          echo "Expected CLI app version number $CLI_TAG to be newer than latest git version number $LATEST_TAG. Check Makefile."
+          echo "Expected CLI app version number $CLI_TAG to be newer than or equal to latest git version number $LATEST_TAG. Check Makefile."
           exit 1
+        fi
+        if [[ $(git describe --exact-match --tags HEAD 2>&1) =~ .*"no tag exactly matches".* ]]; then
+          if [[ $LATEST_TAG == $CLI_TAG ]]
+          then
+            echo "HEAD is not tagged. Expected CLI app version number $CLI_TAG to be newer than latest git version number $LATEST_TAG. Check Makefile."
+            exit 1
+          fi
+        else
+          if [[ $LATEST_TAG != $CLI_TAG ]]
+          then
+            echo "HEAD is tagged. Expected CLI app version number $CLI_TAG to equal to latest git version number $LATEST_TAG. Check Makefile."
+            exit 1
+          fi
         fi
     - name: Upload coverage to Codecov (ubuntu-latest only)
       if: matrix.os == 'ubuntu-latest'
