--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,18 @@
 name: CI
 on: [push, pull_request]
 jobs:
+  format-markdown:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Format Markdown with markdownlint
+        run: |
+          npm install -g markdownlint-cli
+          markdownlint --disable MD013 MD033 --fix . --ignore CODE_OF_CONDUCT.md
+          git add -A
+          git diff --cached --exit-code
   test-and-coverage:
     strategy:
       matrix:
